# SimpleRV

./: CMakeLists.txt  README.md
include/: SimpleRVConfig.h.in
link/: link.ld
script/: single_step.py  ten.cmd
src/: CMakeLists.txt  simple_rv.c  simple_rv.h
